<resources>
    <string name="app_name">LaureApp</string>
    <string name="name">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="email">Email</string>
    <string name="ruolo">Ruolo: </string>
    <string name="professore">Professore</string>
    <string name="studente">Studente</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="registrati">Registrati</string>
    <string name="indietro">Indietro</string>
    <string name="profilo">Profilo</string>
    <string name="accedi">Login</string>
    <string name="accedi_come_ospite">Accedi come ospite</string>
    <string name="ricorda_credenziali">Ricorda credenziali</string>
    <string name="password_dimenticata">Password dimenticata?</string>
    <string name="registrati_qui"><u>Registrati qui</u></string>
    <string name="non_sei_ancora_registrato">Non sei ancora registrato?</string>
    <string name="logout">Esci</string>
    <string name="Impostazione">Impostazioni</string>
    <string name="utente">utente</string>
    <string name="edit_icon">&#004070;</string>
    <string name="close_nav" />
    <string name="open_nav" />
    <string name="messaggio">Messaggio</string>
    <string name="invio">Invio</string>
    <string name="home">Home</string>
    <string name="tesi">Tesi:</string>
    <string name="classifica">Classifica</string>
    <string name="social">Social</string>
    <string name="tesi_description" translatable="false">tesi_description</string>
    <string name="chat_description">chat</string>
    <string name="classifica_description" />
    <string name="social_description" />
    <string name="richieste_description" />
    <string name="richieste">Richieste</string>
    <string name="task_description" />
    <string name="tesisti" />
    <string name="tesisti_description" />
    <string name="tesisti2">Tesisti</string>
    <string name="errore_stringa">Campo {campo} deve contenere solo caratteri.</string>
    <string name="errore_email">Inserisci un indirizzo email valido.</string>
    <string name="errore_campo_vuoto">Campo {campo} obbligatorio mancante!</string>
    <string name="errore_matricola">Campo {campo} deve contenere 6 cifre numeriche.</string>
    <string name="errore_matricola_duplicate">Esiste uno {campo} assosciato a questa matricola.</string>
    <string name="errore_media">Campo {campo} deve contenere 2 cifre numeriche comprese tra 18 e 30</string>
    <string name="errore_scelta">Il campo inserito non è presente nella scelta.</string>
    <string name="password_not_safe_error">La password non incontra i requisiti di sicurezza</string>
    <string name="non_equivalent_passwords">Le password non coincidono</string>
    <string name="errore_autenticazione">Errore di autenticazione. Assicurati che l\'email e la password siano corrette.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matricola">Matricola:</string>
    <string name="inserisci_l_email_di_registrazione">Inserisci l\'email di registrazione</string>
    <string name="avanti">Avanti</string>
    <string name="facolta">Facoltà</string>
    <string name="media">Media</string>
    <string name="esami_mancanti">Esami mancanti:</string>
    <string name="corsi">Corso di Laurea</string>
    <string name="impostaLingua">Seleziona lingua</string>
    <string name="italiano">Italiano</string>
    <string name="inglese">Inglese</string>
    <string-array name="Dipartimento">
        <item>Matematica</item>
        <item>Informatica</item>
        <item>Farmacia</item>
    </string-array>
    <string-array name="StatoTask">
        <item>Non iniziato</item>
        <item>In corso</item>
        <item>Completato</item>
    </string-array>
    <string-array name="Corsi">
        <item>Itps</item>
        <item>Matematica</item>
        <item>Informatica</item>
    </string-array>
    <string-array name="OrdinaPer">
        <item>Visualizzazioni</item>
        <item>Media</item>
        <item>Esami Mancanti</item>
        <item>Tempistiche</item>
    </string-array>
    <string name="title_activity_loading_page">LoadingPageActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Messaggi" />
    <string name="messaggi">Messaggi</string>
    <string name="task">Task</string>
    <string name="arrow_forward_icon">Arrow Forward Icon</string>
    <string name="edit_password_icon">Edit Password Icon</string>
    <string name="taskk">Task</string>
    <string name="classificaTesi">Classifica</string>
    <string name="le_mie_tesi">Le Mie Tesi</string>
    <string name="elenco_tesi">Elenco Tesi</string>
    <string name="student_name_placeholder">%1$s %2$s</string>
    <string name="add_icon_description">Icona add</string>
    <string name="elimina">Elimina</string>
    <string name="salva">Salva</string>
    <string name="ricevimento_1">Ricevimento</string>
    <string name="argomento">Argomento</string>
    <string name="data_ricevimento">Data</string>
    <string name="pulsante_task">Task</string>
    <string name="nome_tesista_task">Nome:</string>
    <string name="cognome_task_tesista">Cognome:</string>
    <string name="matricola_task">Matricola:</string>
    <string name="facolta_task_tesista">Facoltà:</string>
    <string name="cdl_task_tesista">CDL</string>
    <string name="ciclo_cdl_task_tesista">Ciclo CDL:</string>
    <string name="cdl_nome_task_tesista">CDL:</string>
    <string name="titolo_tesi_task_tesista">Titolo Tesi:</string>
    <string name="anagrafica_task_tesista">Anagrafica</string>
    <string name="titolo_dettagli_task">Task</string>
    <string name="stato_task">Stato</string>
    <string name="default_stato_task">Non iniziato</string>
    <string name="stato_task_in_corso">In corso</string>
    <string name="stato_task_completato">Completato</string>
    <string name="data_inizio_dettagli_task">Data Inizio</string>
    <string name="hint_data_inizio">Inizio</string>
    <string name="hint_data_scadenza">Scadenza</string>
    <string name="hint_data_scadenza_button">Data Scadenza</string>
    <string name="text_ricevimenti_button">Ricevimenti</string>
    <string name="text_dettagli">Dettagli</string>
    <string name="dettagli_task_label">Task</string>
    <string name="delete_icon">Icona per cancellare un item</string>
    <string name="intestazione_colonna_ricevimento">Ricevimento</string>
    <string name="intestazione_colonna_argomento">Argomento</string>
    <string name="intestazione_colonna_data">Data</string>
    <string name="error_scadenza_inizio">Data scadenza precedente alla data inizio.</string>
    <string name="error_inizio_scadenza">Data inizio successiva alla scadenza</string>
    <string name="errore_email_esistente">Esiste già un utente asscociato a questa email.</string>
    <string name="ElencoTesi">Elenco Tesi</string>
    <string name="titolo">Titolo</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="tesista">Tesista</string>
    <string name="titolo_tesi">Titolo tesi</string>
    <string name="richiesta">Richiesta</string>
    <string name="title_activity_qr_code" translatable="false">QrCodeActivity</string>
    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="segnalazioni">Segnalazioni</string>
    <string name="titolo_della_tesi">Titolo della tesi</string>
    <string name="listaTesi">Lista Tesi</string>
    <string name="vincoli">Vincoli</string>
    <string name="info">Info</string>
    <string name="titoloTesiProfessore">Titolo:</string>
    <string name="tipologia">Tipologia:</string>
    <string name="data_pubblicazione">Data pubblicazione:</string>
    <string name="ciclo_cdl">Ciclo CDL:</string>
    <string name="abstractTesi">Abstract:</string>
    <string name="tempistiche">Tempistiche:</string>
    <string name="media_voti">Media Voti:</string>
    <string name="skill">Skill:</string>
    <string name="tesistiSegnalazioni">Tesisti - segnalazioni</string>
    <string name="listaSegnalazioni">Lista segnalazioni</string>
    <string name="richiesta_num">Richiesta Num:</string>
    <string name="tesiRichiesta">Tesi:</string>
    <string name="TaskStudente">Task Studente</string>
    <string name="Profilo">Profilo</string>
    <string name="Tesisti">Tesisti</string>
    <string name="Tesista">Tesista</string>
    <string name="dettagliTask">Dettagli Task</string>
    <string name="Ricevimentitask">Ricevimenti task</string>
    <string name="DettaglioTesi">Dettaglio Tesi</string>
    <string name="RichiestediTesi">Richieste di Tesi</string>
</resources>