<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeStudenteLayoutLandscape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeStudenteFragment">
    <!-- ... Griglia contenente le varie card ... -->

    <!-- ... bottoni home e profilo ... -->

    <LinearLayout
        android:id="@+id/grigliaFunzioni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2"

        >


        <!-- ... Card Tesi ... -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTesi"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/tesi_description"
                    android:src="@drawable/outline_assignment_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tesi"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- ... card messaggi ... -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewMessaggi"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/chat_description"
                    android:src="@drawable/outline_chat_24">


                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/messaggi"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- ... card classifica ... -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewClassifica"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/classifica_description"
                    android:src="@drawable/baseline_format_list_numbered_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/classifica"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <!-- ... card social ... -->

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSocial"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/social_description"
                    android:src="@drawable/outline_public_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/social"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTask"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            app:cardCornerRadius="15dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="78dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/task_description"
                    android:src="@drawable/baseline_checklist_rtl_24">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/task"
                    android:textColor="@color/color_primary"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_bottom_nav_menu"
        app:itemIconTint="@color/color_primary"
        app:itemTextColor="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>