<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/LogoUniba"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logouniba_nobg" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background_primary"
        app:cornerRadius="40dp"
        android:text="@string/accedi"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ricorda_credenziali_login" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oppure"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"/>

    <Button
        android:id="@+id/ospite_login"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background_secondary"
        android:text="@string/accedi_come_ospite"
        android:textColor="@color/color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ospite_login"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/non_sei_ancora_registrato" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/registrati_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:autoLink="all"
            android:clickable="true"
            android:linksClickable="true"
            android:selectAllOnFocus="true"
            android:text="@string/registrati_qui"
            android:textColor="@color/color_secondary" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/recupero_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="3dp"
        android:clickable="true"
        android:clipToOutline="false"
        android:text="@string/password_dimenticata"
        android:textColor="@color/color_secondary"
        app:layout_constraintBottom_toTopOf="@+id/conferma_password_input"
        app:layout_constraintEnd_toEndOf="@+id/email_input"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoUniba"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_color"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/color_text_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LogoUniba"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/conferma_password_input"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/mtrl_outlined_stroke_color"
        app:hintTextColor="@color/color_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recupero_password_login"
        tools:ignore="PrivateResource">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_color"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="12dp"
            app:iconTint="@color/black"
            tools:ignore="MissingConstraints,RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/ricorda_credenziali_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:buttonTint="@color/color_primary"
        android:text="@string/ricorda_credenziali"
        app:layout_constraintStart_toStartOf="@+id/conferma_password_input"
        app:layout_constraintTop_toBottomOf="@+id/conferma_password_input"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>